# sigma-rx7

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: sigma_rx7.yaml
data/: sample_synthea_data.json
src/sigma_rx7/: __init__.py
src/sigma_rx7/cli/: __init__.py  main.py
src/sigma_rx7/core/: config.py  pipeline.py
src/sigma_rx7/export/: __init__.py  feature_exporter.py  fhir_exporter.py
src/sigma_rx7/ingestion/: __init__.py  fhir_ingestion.py
src/sigma_rx7/ml/: __init__.py  denial_predictor.py
src/sigma_rx7/normalization/: __init__.py  rxnorm.py
src/sigma_rx7/rules/: __init__.py  generic_recommender.py  overlap_detector.py  payer_rules.py
tests/: __init__.py  conftest.py  test_config.py  test_pipeline.py
